--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -44,7 +44,7 @@
         <br>
         <div class="box-element hidden" id="payment-info">
             <small>Paypal Options</small>
-            <button id="make-payment"></button>
+            <button id="make-payment">Make Payment</button>
         </div>
     </div>
 
@@ -76,15 +76,30 @@
         document.getElementById('shipping-info').innerHTML = ''
     }
 
+    if (user != 'AnonymousUser') {
+        document.getElementByUd('user-info).innerHTML = ''
+    }
+
+    if (shipping == 'False' && user != 'AnonymousUser'){
+        document.getElementById('form-wrapper').classList.add('hidden');
+        document.getElementById('payment-info').classList.remove('hidden')
+    }
+
     var form = document.getElementById('form')
     form.addEventListener('submit', function(e){
         e.preventDefault()
         console.log('Form submitted')
-        document.getElementById('form-button').classList.add('hidden')
+        document.getElementById('form-button').classList.add('hidden');
         document.getElementById('payment-info').classList.remove('hidden')
     })
 
-    document.getElementById('make-payment')
+    document.getElementById('make-payment').addEventListener('click', function(){
+        submit.FormData()
+    })
+
+    function submitFormData(){
+        console.log('Payment button')
+    }
 </script>
 
 {% endblock content %}
