--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -71,13 +71,15 @@
 
 <script type="text/javascript">
     var shipping = '{{order.shipping}}'
+    var total = '{{order.get_cart_total|floatformat:2}}'
 
     if (shipping == 'False'){
         document.getElementById('shipping-info').innerHTML = ''
     }
 
     if (user != 'AnonymousUser') {
-        document.getElementByUd('user-info).innerHTML = ''
+        document.getElementById('user-info').innerHTML = '';
+        console.log(shipping)
     }
 
     if (shipping == 'False' && user != 'AnonymousUser'){
@@ -99,6 +101,38 @@
 
     function submitFormData(){
         console.log('Payment button')
+
+        var userFormData = {
+            'name' : null,
+            'email' : null,
+            'total' : total,
+        }
+
+        var shippingInfo = {
+            'address' : null,
+            'city' : null,
+            'state' : null,
+            'zipcode' : null,
+            'country' : null,
+        }
+
+        if (shipping != 'False'){
+            shippingInfo.address = form.adress.value
+            shippingInfo.city = form.city.value
+            shippingInfo.state = form.state.value
+            shippingInfo.zipcode = form.zipcode.value
+            shippingInfo.country = form.country.value
+        }
+
+        if (user == 'AnonymousUser'){
+            userFormData.name = form.name.value
+            userFormData.email = form.email.value
+
+        }
+
+        console.log('Shipping Info: ', shippingInfo)
+        console.log('User Info: ', userFormData)
+
     }
 </script>
 
