--- a/ecommerce/store/templates/store/main.html
+++ b/ecommerce/store/templates/store/main.html
@@ -33,6 +33,31 @@
         return cookieValue;
       }
       var csrftoken = getToken('csrftoken');
+
+      function getCookie(name){
+        var cookieArr = document.cookie.split(";");
+
+        for (var i = 0; i < cookieArr.length; i++){
+          var cookiePair = cookieArr[i].split("=")
+
+          // if cookie there, return this
+
+          if (name == cookiePair[0].trim()){
+            return decodeURIComponent(cookiePair[1])
+          }
+        }
+        return null;
+      }
+
+      var cart = JSON.parse(getCookie('cart'))
+
+      if (cart == undefined){
+        cart = {}
+        console.log('Cart created', cart)
+        document.cookie = 'cart=' + JSON.stringify(cart) + ";domain=;path=/"
+
+      }
+      console.log('Cart: ', cart)
   </script>
 </head>
 
