Create paypal payment front end

--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -41,7 +41,9 @@
         <br>
         <div class="box-element hidden" id="payment-info">
             <small>Paypal Options</small>
-            <button id="make-payment">Make Payment</button>
+            <!--            <button id="make-payment">Make Payment</button>-->
+            <div id="paypal-button-container">Make Payment</div>
+
         </div>
     </div>
 
@@ -56,15 +58,59 @@
                 <div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
                 <div style="flex:2"><p>{{item.product.name}}</p></div>
                 <div style="flex:2"><p>${{item.product.price|floatformat:2}}</p></div>
-                <div style="flex:2"><p>{{item.quantity}}</p></div>
+                <div style="flex:2"><p>x {{item.quantity}}</p></div>
 
             </div>
             {% endfor %}
-            <h5>Items:       {{order.get_cart_items}}</h5>
-            <h5>Total:       ${{order.get_cart_total|floatformat:2}}</h5>
+            <h5>Items: {{order.get_cart_items}}</h5>
+            <h5>Total: ${{order.get_cart_total|floatformat:2}}</h5>
         </div>
     </div>
 </div>
+
+<script src="https://www.paypal.com/sdk/js?client-id=AdNGoZ_pzIJ2Dj8qzHZ3J-ubsWNXb1xwPrxxM3qDzvyrmeheJweby4hsfXEQlMwmO9pNLAAVKkZoy4Zk&currency=USD&disable-funding=credit"></script>
+
+<script>
+        // Render the PayPal button into #paypal-button-container
+        paypal.Buttons({
+
+            style: {
+                color: 'blue',
+                shape: 'rect',
+            },
+
+
+            // Set up the transaction
+            createOrder: function(data, actions) {
+                return actions.order.create({
+                    purchase_units: [{
+                        amount: {
+                            value: '88.44'
+                        }
+                    }]
+                });
+            },
+
+            // Finalize the transaction
+            onApprove: function(data, actions) {
+                return actions.order.capture().then(function(orderData) {
+                    // Successful capture! For demo purposes:
+                    console.log('Capture result', orderData, JSON.stringify(orderData, null, 2));
+                    var transaction = orderData.purchase_units[0].payments.captures[0];
+                    alert('Transaction '+ transaction.status + ': ' + transaction.id + '\n\nSee console for all available details');
+
+                    // Replace the above to show a success message within this page, e.g.
+                    // const element = document.getElementById('paypal-button-container');
+                    // element.innerHTML = '';
+                    // element.innerHTML = '<h3>Thank you for your payment!</h3>';
+                    // Or go to another URL:  actions.redirect('thank_you.html');
+                });
+            }
+
+
+        }).render('#paypal-button-container');
+
+</script>
 
 <script type="text/javascript">
     var shipping = '{{order.shipping}}'
@@ -91,13 +137,13 @@
         document.getElementById('form-button').classList.add('hidden');
         document.getElementById('payment-info').classList.remove('hidden')
     })
-
+    /*
     document.getElementById('make-payment').addEventListener('click', function(e){
         submitFormData()
-    })
+    })*/
 
     function submitFormData(){
-        console.log('Payment button')
+        console.log('Payment button clicked')
 
         var userFormData = {
             'name' : null,
@@ -128,23 +174,29 @@
         console.log('Shipping Info: ', shippingInfo)
         console.log('User Info: ', userFormData)
 
-        var url = '/process_order/'
+        var url = "/process_order/"
         fetch(url, {
             method:'POST',
             headers:{
-                'Content-Type': 'application/json',
-                'X-CSRFToken' : csrftoken
+                'Content-Type':'applicaiton/json',
+                'X-CSRFToken':csrftoken,
             },
             body:JSON.stringify({'form':userFormData, 'shipping':shippingInfo}),
 
         })
-        .then((response) =>response.json())
-        .then((data) => {
-            console.log('Success:', data)
-            alert('Transaction completed');
-            window.location.href = "{% url 'store' %}"
-        })
+            .then((response) => response.json())
+            .then((data) => {
+                console.log('Success:', data);
+                alert('Transaction completed');
+
+                cart = {}
+                document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/"
+
+                window.location.href = "{% url 'store' %}"
+
+            })
     }
+
 </script>
 
 {% endblock content %}
