--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -71,6 +71,8 @@
 <script src="https://www.paypal.com/sdk/js?client-id=AdNGoZ_pzIJ2Dj8qzHZ3J-ubsWNXb1xwPrxxM3qDzvyrmeheJweby4hsfXEQlMwmO9pNLAAVKkZoy4Zk&currency=USD&disable-funding=credit"></script>
 
 <script>
+        var total = '{{order.get_cart_total|floatformat:2}}'
+
         // Render the PayPal button into #paypal-button-container
         paypal.Buttons({
 
@@ -85,7 +87,7 @@
                 return actions.order.create({
                     purchase_units: [{
                         amount: {
-                            value: '88.44'
+                            value: parseFloat(total).toFixed(2)
                         }
                     }]
                 });
@@ -95,10 +97,11 @@
             onApprove: function(data, actions) {
                 return actions.order.capture().then(function(orderData) {
                     // Successful capture! For demo purposes:
-                    console.log('Capture result', orderData, JSON.stringify(orderData, null, 2));
-                    var transaction = orderData.purchase_units[0].payments.captures[0];
-                    alert('Transaction '+ transaction.status + ': ' + transaction.id + '\n\nSee console for all available details');
+<!--                    console.log('Capture result', orderData, JSON.stringify(orderData, null, 2));-->
+<!--                    var transaction = orderData.purchase_units[0].payments.captures[0];-->
+<!--                    alert('Transaction '+ transaction.status + ': ' + transaction.id + '\n\nSee console for all available details');-->
 
+                    submitFormData()
                     // Replace the above to show a success message within this page, e.g.
                     // const element = document.getElementById('paypal-button-container');
                     // element.innerHTML = '';
