--- a/ecommerce/store/templates/store/main.html
+++ b/ecommerce/store/templates/store/main.html
@@ -4,17 +4,17 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <title>Django Ecommerce</title>
+    <title>Django Ecommerce</title>
 
-  <!-- Custom styles for this template -->
-  <link type="text/css" href="{% static 'css/main.css' %}" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" >
-  <script type="text/javascript">
+    <!-- Custom styles for this template -->
+    <link type="text/css" href="{% static 'css/main.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script type="text/javascript">
       var user = "{{request.user}}"
 
       function getToken(name) {
@@ -58,41 +58,48 @@
 
       }
       console.log('Cart: ', cart)
-  </script>
+
+    </script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">Ecom</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">Ecom</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
 
+        </div>
+
+        <div class="form-inline my-2 my-lg-0">
+            {% if request.user.is_authenticated %}
+            <a href="{% url 'logout' %}" class="btn btn-warning">Logout</a>
+            {% else %}
+            <a href="{% url 'register' %}" class="btn btn-warning">Register</a>
+            <hr>
+            <a href="{% url 'login' %}" class="btn btn-warning">Login</a>
+            {% endif %}
+            <a href="{% url 'cart' %}">
+                <img id="cart-icon" src="{% static 'images/cart.png'%}">
+            </a>
+            <p id="cart-total">{{cartItems}}</p>
+        </div>
     </div>
-
-    <div class="form-inline my-2 my-lg-0">
-      <a href="#" class="btn btn-warning">Login</a>
-
-      <a href="{% url 'cart' %}">
-        <img id="cart-icon" src="{% static 'images/cart.png'%}">
-      </a>
-      <p id="cart-total">{{cartItems}}</p>
-    </div>
-  </div>
 </nav>
 
 <div class="container">
-  <br>
-  {% block content %}
+    <br>
+    {% block content %}
 
-  {% endblock content %}
+    {% endblock content %}
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
